@@ -9,7 +9,7 @@
 
 Summary: Versatile resource statistics tool
 Name: dstat
-Version: 0.6.6
+Version: 0.6.6svn
 Release: 1
 License: GPL
 Group: System Environment/Base
@@ -60,6 +60,9 @@ confusion, less mistakes.
 %{_datadir}/dstat/
 
 %changelog
+* Sun Jun 24 2007 Dag Wieers <dag@wieers.com> - 0.6.6svn-1
+- Updated to release 0.6.6svn.
+
 * Sat Apr 28 2007 Dag Wieers <dag@wieers.com> - 0.6.6-1
 - Updated to release 0.6.6.
 
